--- a/mywork.html
+++ b/mywork.html
@@ -11,113 +11,113 @@
 <body>
     <div class="container">
         <nav class="navbar  navbar-light ">
-          <a class="navbar-brand" href="index.html"><img id="logo" src="images/b-logo.png"></a>
-          <nav class="nav bar justify-content-end ">   
-              <a class="nav-link" href="aboutme.html">About</a>
-              <a class="nav-link" href="skills.html">Skills</a>
-              <a class="nav-link" href="mywork.html">Work</a>
-              <a class="nav-link" href="contact.html">Contact</a>
-            </nav> 
+            <a class="navbar-brand" href="index.html"><img id="logo" src="images/b-logo.png"></a>
+            <nav class="nav bar justify-content-end ">
+                <a class="nav-link" href="aboutme.html">About</a>
+                <a class="nav-link" href="skills.html">Skills</a>
+                <a class="nav-link" href="mywork.html">Work</a>
+                <a class="nav-link" href="contact.html">Contact</a>
             </nav>
-      </div>
-    
+        </nav>
+    </div>
+
     <div class="container top-con">
         <h1 class="h1-homebio">MY CASE STUDIES</h1>
         <img class="p-bar" src="images/gray-bar.png">
 
-        <div class="row">
-            <div class="col">
-                <div id="imagework1">
-                    <img class="workimage" src="images/cpr/cpr-web-redesign.png">
+    </div>
+
+    <div class="container top-con">
+
+        <div class="card mb-3" style="max-width:">
+            <div class="row no-gutters space-b">
+                <div class="col-md-6">
+                    <img src="images/cpr/cpr-web-redesign.png" class="card-img" alt="...">
+                </div>
+                <div class="col-md-6">
+                    <div class="card-body">
+                        <h3 class="card-title">Redesign of the Chicago Pet Rescue Website</h3>
+                        <p class="card-text">Applied modern UI elements, simplified the application form, and
+                            re-organized the navigation to enhance the usability and aesthetics of the Chicago Pet
+                            Rescue website while maintaining most of the original site composition and content
+                            integrity.</p>
+                        <a href="cpr-redesign.html" class="secondary-button">Learn More</a>
+                    </div>
                 </div>
             </div>
-            <div class="col">
-                <div id="pwork1">
-                    <h4>Redesign of the Chicago Pet Rescue Website</h4>
-                    <p class="workp">Applied modern UI elements, simplified the application form, and re-organized the
-                        navigation to enhance the usability and aesthetics of the Chicago Pet Rescue website while
-                        maintaining most of the original site composition and content integrity.
-                    </p>
-                    <a href="cpr-redesign.html" class="secondary-button">Learn More</a>
+        </div>
+
+        <div class="card mb-3" style="max-width:">
+            <div class="row no-gutters space-b">
+                <div class="col-md-6">
+                    <img src="images/uwh/uwh-responsive-design.png" class="card-img" alt="...">
+                </div>
+                <div class="col-md-6">
+                    <div class="card-body">
+                        <h3 class="card-title">Responsive Redesign of the Chicago
+                            Underwater Hockey Website</h3>
+                        <p class="card-text">Expanding the website contect to encourage new members to sign up and
+                            provide a
+                            one-stop-shop with the resources and information that existing members need.</p>
+                        <a href="uwh.html" class="secondary-button">Learn More</a>
+                    </div>
                 </div>
             </div>
         </div>
 
 
-        <div class="row">
-            <div class="col">
-                <div id="imagework1">
-                    <img class="workimage" src="images/uwh/uwh-responsive-design.png">
+        <div class="card mb-3" style="max-width:">
+            <div class="row no-gutters space-b">
+                <div class="col-md-6">
+                    <img src="images/edu-responsive-web-design.png" class="card-img" alt="...">
                 </div>
-            </div>
-            <div class="col">
-                <div id="pwork1">
-                    <h4>Responsive Redesign of the Chicago
-                        Underwater Hockey Website</h4>
-                    <p class="workp">Expanding the website contect to encourage new members to sign up and provide a
-                        one-stop-shop with the resources and information that existing members need. </p>
-                    <a href="uwh.html" class="secondary-button">Learn More</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-
-            <div class="col">
-                <div id="imagework2">
-                    <img class="workimage" src="images/edu-responsive-web-design.png">
-                </div>
-            </div>
-            <div class="col">
-                <div id="pwork2">
-                    <h4>Responsive Redesign of the US Department
-                        of Education Website</h4>
-                    <p class="workp">Enhancing the user experience through proper information hierarchy, simplified
-                        navigation, and new aesthetic and minimalist responsive web design. </p>
-                    <a href="edu-responsive-redesign.html" class="secondary-button">Learn More</a>
+                <div class="col-md-6">
+                    <div class="card-body">
+                        <h3 class="card-title">Responsive Redesign of the US Department
+                            of Education Website</h3>
+                        <p class="card-text">Enhancing the user experience through proper information hierarchy,
+                            simplified navigation, and new aesthetic and minimalist responsive web design.</p>
+                        <a href="edu-responsive-redesign.html" class="secondary-button">Learn More</a>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="row">
-
-            <div class="col">
-                <div id="imagework3">
-                    <img class="workimage" src="images/pal-app-design.png">
+        <div class="card mb-3" style="max-width:">
+            <div class="row no-gutters space-b">
+                <div class="col-md-6">
+                    <img src="images/pal-app-design.png" class="card-img" alt="...">
+                </div>
+                <div class="col-md-6">
+                    <div class="card-body">
+                        <h3 class="card-title">Pet Information and Record Keeping
+                            App Design</h3>
+                        <p class="card-text">An app to alleviate the challenges that pet owners face when keeping track
+                            of their
+                            pet’s medical records, grooming appointments, and overall wellness schedules.</p>
+                        <a href="" class="secondary-button">Learn More</a>
+                    </div>
                 </div>
             </div>
-            <div class="col">
-                <div id="pwork3">
-                    <h4>Pet Information and Record Keeping
-                        App Design</h4>
-                    <p class="workp">An app to alleviate the challenges that pet owners face when keeping track of their
-                        pet’s medical records, grooming appointments, and overall wellness schedules.
-                    </p>
-                    <a href="#" class="secondary-button">Learn More</a>
-                </div>
-            </div>
-
         </div>
 
 
-        <div class="row">
-
-            <div class="col">
-                <div id="imagework4">
-                    <img class="workimage" src="images/travel-app-design.png">
+        <div class="card mb-3" style="max-width:">
+            <div class="row no-gutters space-b">
+                <div class="col-md-6">
+                    <img src="images/travel-app-design.png" class="card-img" alt="...">
+                </div>
+                <div class="col-md-6">
+                    <div class="card-body">
+                        <h3 class="card-title">Group Travel Planning
+                            App Design</h3>
+                        <p class="card-text">An app to adress the challenges and frustrations people experince during
+                            the group
+                            travel planning process.</p>
+                        <a href="" class="secondary-button">Learn More</a>
+                    </div>
                 </div>
             </div>
-            <div class="col">
-                <div id="pwork4">
-                    <h4>Group Travel Planning
-                        App Design</h4>
-                    <p class="workp">An app to adress the challenges and frustrations people experince during the group
-                        travel planning process.
-                    </p>
-                    <a href="#" class="secondary-button">Learn More</a>
-                </div>
-            </div>
-
         </div>
 
 
@@ -127,25 +127,23 @@
 
 
 
-    </section>
-
     <div class="container footer-con">
-        
+
         <nav class="navbar">
-          <nav class="navbar-brand">
-            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
-            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Skills</a>
-            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Work</a>
-            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a>
-          </nav>
-          <nav class="navbar justify-content-end">
-            <h6 class="h6connect">BEAHARNOIS@ME.COM</h6>
-            <a class="nav-link" href="#"><img src="images/fb.png"></a>
-            <a class="nav-link" href="#"><img src="images/insta.png"></a>
-            <a class="nav-link" href="#"><img src="images/LinkedIn.png"></a>
-          </nav>
+            <nav class="navbar-brand">
+                <a class="nav-link" href="aboutme.html" tabindex="-1" aria-disabled="true">About</a>
+                <a class="nav-link" href="skills.html" tabindex="-1" aria-disabled="true">Skills</a>
+                <a class="nav-link" href="mywork.html" tabindex="-1" aria-disabled="true">Work</a>
+                <a class="nav-link" href="contact.html" tabindex="-1" aria-disabled="true">Contact</a>
+            </nav>
+            <nav class="navbar justify-content-end">
+                <h6 class="h6connect">BEAHARNOIS@ME.COM</h6>
+                <a class="nav-link" href="#"><img src="images/fb.png"></a>
+                <a class="nav-link" href="#"><img src="images/insta.png"></a>
+                <a class="nav-link" href="#"><img src="images/LinkedIn.png"></a>
+            </nav>
         </nav>
-      </div>
+    </div>
 
 
     <script src="js/index.js"></script>
