--- a/skills.html
+++ b/skills.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -10,99 +11,104 @@
 <body>
     <div class="container">
         <nav class="navbar  navbar-light ">
-          <a class="navbar-brand" href="index.html"><img id="logo" src="images/b-logo.png"></a>
-          <nav class="nav bar justify-content-end ">   
-          <a class="nav-link" href="aboutme.html">About</a>
-              <a class="nav-link" href="skills.html">Skills</a>
-              <a class="nav-link" href="mywork.html">Work</a>
-              <a class="nav-link" href="contact.html">Contact</a>
-            </nav> 
+            <a class="navbar-brand" href="index.html"><img id="logo" src="images/b-logo.png"></a>
+            <nav class="nav bar justify-content-end ">
+                <a class="nav-link" href="aboutme.html">About</a>
+                <a class="nav-link" href="skills.html">Skills</a>
+                <a class="nav-link" href="mywork.html">Work</a>
+                <a class="nav-link" href="contact.html">Contact</a>
             </nav>
-      </div>
-    
+        </nav>
+    </div>
+
     <!--  My UX Skills section coded using CSS flex -->
 
-   
-        <div class="container ">
-            <h1 class="h1-homebio">MY UX/UI SKILLS</h1>
-            <img class="p-bar" src="images/gray-bar.png">
-            <div class="row">
-                <div class="col-6">
+
+    <div class="container top-con ">
+        <h1 class="h1-homebio">MY UX/UI SKILLS</h1>
+        <img class="p-bar" src="images/gray-bar.png">
+        <div class="row">
+            <div class="col-6">
                 <img class="teamimage img-fluid" src="images/team-work-bw.jpg">
             </div>
 
             <div class="col-6 skillsbg">
-                    <h2 class="hskill">“I love working in teams and learning from others. It makes the job more fun and fullfilling.”- Bea</h2>
-            </div>
+                <h2 class="hskill">“I love working in teams and learning from others. It makes the job more fun and
+                    fullfilling.”- Bea</h2>
             </div>
         </div>
-   
- 
+    </div>
 
-        <div class="container top-con">
-            <div class="row">
-                <div class="col-lg-4">
-                    <img class="skillimage" src="images/user-research.png">
-                </div>
-                <div class="col-lg-8">
-                    <h3>User Research</h3>
-                    <p> Gaining an empathic understanding of the users through interviews and usability testing. This
-                        consits on creating a proto persona, running surveys, formulating interview questions, and
-                        conducting stakeholders and users interviews and tests. The main goal is to identify the users’
-                        behavioral demographics, the traits or life experiences that influence their technology habits,
-                        and their frustrations and challenges, so we can define the their needs and expectations. </p>
-                </div>
+
+
+    <div class="container top-con">
+        <div class="row space-b">
+            <div class="col-lg-8">
+                <h4>User Research</h4>
+                <p> Gaining an empathic understanding of the users through interviews and usability testing. This
+                    consits on creating a proto persona, running surveys, formulating interview questions, and
+                    conducting stakeholders and users interviews and tests. The main goal is to identify the users’
+                    behavioral demographics, the traits or life experiences that influence their technology habits,
+                    and their frustrations and challenges, so we can define the their needs and expectations. </p>
             </div>
-
-            <div class="row">
-                <div class="col-lg-4">
-                    <img class="skillimage" src="images/problem-solving.png">
-                </div>
-                <div class="col-lg-8">
-                    <h3>Problem Solving</h3>
-                    <p> Generating ideas, and challenging and validating solutions to target the users' needs and painpoints gathered
-                        through the user research. During this process we analyze the websites or interfaces for
-                        their use of design principles and heuristics. Common trends are identified using an affinity
-                        diagram and sorted into a prioritization matrix of the users' and stakeholders' wants and needs to know where
-                        to focus our efforts. We then move into card sorting and creating an inspiration board and a style
-                        guide that will direct our redesign.
-                    </p>
-                </div>
+            <div class="col-lg-4">
+                <img class="skillimage" src="images/user-research.png">
             </div>
-
-            <div class="row">
-                <div class="col-lg-4"><img class="skillimage" src="images/ui-design.png">
-                </div>
-                <div class="col-lg-8">
-                    <h3>User Interface Design</h3>
-                    <p> Executing the design solution from paper sketches to low-fidelity wireframes to high-fidelity
-                        prototypes applying UX/UI best practices. We conduct multiple rounds of usability testings during
-                        the all the design phases, from wireframes to high-fidelity prototypes, and interate on the
-                        design based on the testing feedback until they are at a place where they represent what the end product may look like. After the design has been tested and solidified, we move into the developing phase and apply the HTML,
-                        CSS, JQuery, JavaScript, Boostrap, and other necessary code in order publish the interface. </p>
-                </div>
-            </div>
-
         </div>
 
+        <div class="row space-b">
+            <div class="col-lg-8">
+                <h4>Problem Solving</h4>
+                <p> Generating ideas, and challenging and validating solutions to target the users' needs and painpoints
+                    gathered
+                    through the user research. During this process we analyze the websites or interfaces for
+                    their use of design principles and heuristics. Common trends are identified using an affinity
+                    diagram and sorted into a prioritization matrix of the users' and stakeholders' wants and needs to
+                    know where
+                    to focus our efforts. We then move into card sorting and creating an inspiration board and a style
+                    guide that will direct our redesign.
+                </p>
+            </div>
+            <div class="col-lg-4">
+                <img class="skillimage" src="images/problem-solving.png">
+            </div>
+        </div>
 
-        <div class="container">
-           
-            <nav class="navbar">
-              <nav class="navbar-brand">
+        <div class="row space-b">
+            <div class="col-lg-8">
+                <h4>User Interface Design</h4>
+                <p> Executing the design solution from paper sketches to low-fidelity wireframes to high-fidelity
+                    prototypes applying UX/UI best practices. We conduct multiple rounds of usability testings during
+                    the all the design phases, from wireframes to high-fidelity prototypes, and interate on the
+                    design based on the testing feedback until they are at a place where they represent what the end
+                    product may look like. After the design has been tested and solidified, we move into the developing
+                    phase and apply the HTML,
+                    CSS, JQuery, JavaScript, Boostrap, and other necessary code in order publish the interface. </p>
+            </div>
+            <div class="col-lg-4"><img class="skillimage" src="images/ui-design.png">
+            </div>
+        </div>
+
+    </div>
+
+
+    <div class="container footer-con">
+
+        <nav class="navbar">
+            <nav class="navbar-brand">
                 <a class="nav-link" href="aboutme.html" tabindex="-1" aria-disabled="true">About</a>
                 <a class="nav-link" href="skills.html" tabindex="-1" aria-disabled="true">Skills</a>
                 <a class="nav-link" href="mywork.html" tabindex="-1" aria-disabled="true">Work</a>
                 <a class="nav-link" href="contact.html" tabindex="-1" aria-disabled="true">Contact</a>
-              </nav>
-              <nav class="navbar justify-content-end">
+            </nav>
+            <nav class="navbar justify-content-end">
                 <h6 class="h6connect">BEAHARNOIS@ME.COM</h6>
                 <a class="nav-link" href="#"><img src="images/fb.png"></a>
                 <a class="nav-link" href="#"><img src="images/insta.png"></a>
                 <a class="nav-link" href="#"><img src="images/LinkedIn.png"></a>
-              </nav>
             </nav>
-          </div>
+        </nav>
+    </div>
 </body>
 
 </html>
