--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
   <div class="container">
     <nav class="navbar  navbar-light ">
       <a class="navbar-brand" href="index.html"><img id="logo" src="images/b-logo.png"></a>
-      <nav class="nav bar justify-content-end ">   
-      <a class="nav-link" href="aboutme.html">About</a>
-          <a class="nav-link" href="skills.html">Skills</a>
-          <a class="nav-link" href="mywork.html">Work</a>
-          <a class="nav-link" href="contact.html">Contact</a>
-        </nav> 
-        </nav>
+      <nav class="nav bar justify-content-end ">
+        <a class="nav-link" href="aboutme.html">About</a>
+        <a class="nav-link" href="skills.html">Skills</a>
+        <a class="nav-link" href="mywork.html">Work</a>
+        <a class="nav-link" href="contact.html">Contact</a>
+      </nav>
+    </nav>
   </div>
-  
+
 
   <div class="jumbotron jumbotron-fluid hp-hero">
     <div class="container hero-container">
@@ -48,28 +48,29 @@
     </div>
   </div>
 
-  
-    <div class="container">
-      <h1 class="h1-case">Case Studies</h1>
-      <img class="p-bar" src="images/gray-bar.png">
-    </div>
+
+  <div class="container">
+    <h1 class="h1-case">Featured Case Studies</h1>
+    <img class="p-bar" src="images/gray-bar.png">
+  </div>
 
   <div class="container top-con">
     <div class="row space-b">
-      <div class="col-lg-4">
+      <div class="col-lg-5">
         <h3 class="card-title">Redesign of the Chicago Pet Rescue Website</h3>
-        <p>Applied modern UI elements, simplified the application form, and re-organized the navigation to enhance the
-          usability and aesthetics of the Chicago Pet Rescue website while maintaining most of the original site composition and content integrity.
+        <p>Applied modern UI elements, simplified the adoption application form, and re-organized the navigation to enhance the
+          usability and aesthetics of the Chicago Pet Rescue website while maintaining most of the original site
+          composition and content integrity.
         </p>
         <a href="cpr-redesign.html" class="secondary-button">Learn More</a>
       </div>
-      <div class="col-lg-8">
-        <img class="img-fluid" src="images/cpr/hero-cpr-redesign-cropped.png">
+      <div class="col-lg-7">
+        <img class="img-fluid" style="max-width: 570px;" src="images/cpr/hero-cpr-redesign-cropped.png">
       </div>
     </div>
   </div>
-  <div class="container">
-    <div class="row">
+  <div class="container top-con">
+    <div class="row space-b">
       <div class="col-lg-6">
         <div class="card" style="width: 30em;">
           <img src="images/uwh/uwh-responsive-design.png" class="card-img-top" alt="...">
@@ -94,31 +95,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-lg-6">
-        <div class="card" style="width: 30em;">
-          <img src="images/pal-app-design.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h3 class="card-title">I Got You Pal!</h3>
-            <p class="card-text">An app to alleviate the challenges that pet owners face when keeping track of their
-              pet’s medical records, grooming appointments, and overall wellness schedules.</p>
-            <a href="#" class="secondary-button">Learn More</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-6">
-        <div class="card" style="width: 30rem;">
-          <img src="images/travel-app-design.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h3 class="card-title">Yes, Book It!</h3>
-            <p class="card-text">An app to address the challenges and frustrations that people experince when making
-              group travel plans, keeping track of the travel documents and other details associated with the process.
-            </p>
-            <a href="#" class="secondary-button">Learn More</a>
-          </div>
-        </div>
-      </div>
-    </div>
+    
     <div class="view-all">
       <a href="mywork.html"><button class="view-all-button">VIEW ALL CASE STUDIES</button></a>
     </div>
