--- a/cpr-redesign.html
+++ b/cpr-redesign.html
@@ -225,7 +225,7 @@
             <div class="col-lg-6">
                 <H4>Card sorting and Sitemaping </H4>
                 <P>We went through the process of card sorting to start giving form to our ideas and solutions. </P>
-                <IMG class="cs-img" SRC="IMAGES/cpr/sitemap.png">
+                <IMG class="cs-img" SRC="images/cpr/sitemap.png">
             </div>
             <div class="col-lg-6">
                 <H4>USER FLOW</H4>
